# FinTrader

./: README.md  STRATEGY_GUIDE.md  backtest_example.py  position_sizing_example.py  pyproject.toml
.Data/: DataExtract.ipynb
Strats/: Bol_Strat.py  PPO_Strat.py  RSI_Strat.py  Rand_Strat.py  position_sizer.py
